cluster/apps/default/teslamate/app/abrp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: teslamate-abrp
  name: teslamate-abrp
  namespace: default
spec:
  replicas: 0
  selector:
    matchLabels:
      app: teslamate-abrp
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: teslamate-abrp
    spec:
      containers:
        - name: teslamate-abrp
          image: fetzu/teslamate-abrp:latest
          imagePullPolicy: Always
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
