cluster/apps/default/teslamate/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslamate
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: teslamate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: teslamate
    spec:
      containers:
        - name: teslamate
          image: teslamate/teslamate:4.3.0
          ports:
            - name: http
              containerPort: 4000
          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 5
            failureThreshold: 30
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            tcpSocket:
              port: http
