cluster/apps/default/teslamate/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teslamate
  namespace: default
spec:
  ports:
    - name: http
      port: 4000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: teslamate
