cluster/apps/default/teslamate/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teslamate
  namespace: default
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "car"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-ips-only@kubernetescrd,networking-authentik@kubernetescrd"
    external-dns/internal: "true"
spec:
  ingressClassName: traefik-internal
  tls:
    - secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
      hosts:
        - teslamate.${SECRET_LAB_DOMAIN}
  rules:
    - host: teslamate.${SECRET_LAB_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teslamate
                port:
                  number: 4000
